v0.0.0.5:
	- Fixed:
		- #7 xmltv header

v0.0.0.4:
	- New:
		- Changed name to epg-dk, to avoid any copyright issue

v0.0.0.3:
	- New:
		- Added a prefs setting, allowing to grab x days ahead. Maximum is 7 days, since YouSee doesn't return anythin beyound that

v0.0.0.2:
	- Fixed:
		-	#1 Firstrun exception
		- #2 Altering prefs

v0.0.0.1:
	- Initial version