@@ -1,6 +1,8 @@
 v0.0.0.5:
 	- Fixed:
 		- #7 xmltv header
+		- #8 Wrong Actor info
+		- #9 Cast in a strange way
 
 v0.0.0.4:
 	- New:
